src/blocks/Settings/partials/FriendSettings/FriendSettings.module.css
.root {
}

.rightHeader {
  display: flex;
}

.cross {
  height: 20px;
  width: 20px;
  margin-left: auto;
  margin-right: 80px;
}

.cross:hover {
  cursor: pointer;
}

.header {
  font-size: 35px;
}

.closeOptions {
  display: flex;
}

.rightOption {
  display: flex;
  background-color: #404040;
  padding: 10px;
  margin: 10px 0;
  border-radius: 5px;
  width: 90%;
}

.heading {
  margin: 0;
}

.onOffButtons {
  margin-left: auto;
}

